fix layout bugs

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,18 @@
+
+
+.bd-grid {
+    max-width: 1024px;
+    display: grid;
+    grid-template-columns: 100%;
+    column-gap: 2rem;
+    width: calc(100% - 2rem);
+    margin-left: $mb-2;
+    margin-right: $mb-2;
+  }
+
+
+/*================ CLASS CSS ===================*/
+
 .section {
     padding: 4rem 0 2rem;
   }
